added messages base module, entity and dto
