# backend/src/messages/dto/create-message.dto.ts
@@ -1,0 +1,4 @@
+export class CreateMessageDto {
+  content: string;
+
+}
