# backend/src/messages/messages.controller.ts
@@ -1,0 +1,26 @@
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  Patch,
+  Param,
+  Delete,
+} from '@nestjs/common';
+import { MessagesService } from './messages.service';
+import { CreateMessageDto } from './dto/create-message.dto';
+
+@Controller('messages')
+export class MessagesController {
+  constructor(private readonly messagesService: MessagesService) {}
+
+  @Post()
+  create(@Body() createMessageDto: CreateMessageDto) {
+    return this.messagesService.createMessage(createMessageDto);
+  }
+
+  @Get()
+  findAll() {
+    return this.messagesService.getAllMessages();
+  }
+}
